@@ -88,6 +88,7 @@ directory = profiles
 directory = corpus
 directory = lib/Dist/Zilla/MintingProfile
 file      = lib/Dist/Zilla/Plugin/Author/Plicease/Init.pm
+file      = lib/Dist/Zilla/Plugin/Author/Plicease/PrePodWeaver.pm
 
 [Author::Plicease::Upload]
 [InsertExample]
