@@ -15,7 +15,6 @@ except = .travis.yml
 [MakeMaker]
 [Manifest]
 [TestRelease]
-[Author::Plicease::PrePodWeaver]
 [PodWeaver]
 
 [NextRelease]
